# fastapi-demo-project

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
app/: db.py  main.py  models.py
app/routers/: discussion_threads.py
test/: conftest.py  test_discussion_thread.py  test_user.py
